fix: Sort close pair id by size tuple (bee1, bee2) with (bee1ID < bee2ID)

--- a/bib/Zeitversatz.ipynb
+++ b/bib/Zeitversatz.ipynb
@@ -744,8 +744,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "heading_collapsed": true
+    "collapsed": true
    },
    "source": [
     "# Dateien vergleichen (timestamp From am FrameContainer)\n",
@@ -761,8 +760,7 @@
      "end_time": "2017-01-18T18:26:42.445899",
      "start_time": "2017-01-18T18:26:42.437097"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -777,8 +775,7 @@
      "end_time": "2017-01-18T18:26:44.175607",
      "start_time": "2017-01-18T18:26:44.114836"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -793,8 +790,7 @@
      "end_time": "2017-01-18T18:26:45.408181",
      "start_time": "2017-01-18T18:26:45.396058"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -860,8 +856,7 @@
      "end_time": "2017-01-17T22:49:50.421102",
      "start_time": "2017-01-17T22:49:49.941555"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -883,8 +878,7 @@
      "end_time": "2017-01-17T22:49:50.585341",
      "start_time": "2017-01-17T22:49:50.570054"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -910,8 +904,7 @@
      "end_time": "2017-01-17T22:49:51.173864",
      "start_time": "2017-01-17T22:49:51.166371"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -926,8 +919,7 @@
      "end_time": "2017-01-17T22:49:52.024178",
      "start_time": "2017-01-17T22:49:52.002483"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1010,8 +1002,7 @@
      "end_time": "2017-01-17T22:49:53.046127",
      "start_time": "2017-01-17T22:49:53.031094"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1026,8 +1017,7 @@
      "end_time": "2017-01-17T22:49:54.322552",
      "start_time": "2017-01-17T22:49:54.311893"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1040,9 +1030,7 @@
     "ExecuteTime": {
      "end_time": "2017-01-18T18:27:42.296564",
      "start_time": "2017-01-18T18:27:42.291112"
-    },
-    "heading_collapsed": true,
-    "hidden": true
+    }
    },
    "source": [
     "## Minimaler und Maximaler Fehler"
@@ -1056,8 +1044,7 @@
      "end_time": "2017-01-18T18:27:27.626240",
      "start_time": "2017-01-18T18:27:27.608994"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1093,8 +1080,7 @@
      "end_time": "2017-01-17T22:49:56.006186",
      "start_time": "2017-01-17T22:49:55.993045"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1128,8 +1114,7 @@
     "ExecuteTime": {
      "end_time": "2017-01-17T22:47:06.006482",
      "start_time": "2017-01-17T22:47:05.999881"
-    },
-    "heading_collapsed": true
+    }
    },
    "source": [
     "# Timestampf am ersten Frame imFrameContainer vergleichen"
@@ -1143,8 +1128,7 @@
      "end_time": "2017-01-17T22:49:59.622178",
      "start_time": "2017-01-17T22:49:59.381189"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1166,8 +1150,7 @@
      "end_time": "2017-01-17T22:50:00.078140",
      "start_time": "2017-01-17T22:50:00.070717"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1193,8 +1176,7 @@
      "end_time": "2017-01-17T22:50:20.670261",
      "start_time": "2017-01-17T22:50:20.662339"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1209,8 +1191,7 @@
      "end_time": "2017-01-17T22:50:26.924320",
      "start_time": "2017-01-17T22:50:26.900313"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1293,8 +1274,7 @@
      "end_time": "2017-01-17T22:50:37.970204",
      "start_time": "2017-01-17T22:50:37.952331"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1309,8 +1289,7 @@
      "end_time": "2017-01-17T22:50:43.890932",
      "start_time": "2017-01-17T22:50:43.881383"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1319,9 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Minimaler und Maximaler Fehler\n"
    ]
@@ -1334,8 +1311,7 @@
      "end_time": "2017-01-18T18:28:10.503329",
      "start_time": "2017-01-18T18:28:10.488445"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1371,8 +1347,7 @@
      "end_time": "2017-01-17T22:50:49.014387",
      "start_time": "2017-01-17T22:50:49.003442"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1402,9 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Dateien über den gesamten Zeitraum"
    ]
@@ -1417,8 +1390,7 @@
      "end_time": "2017-01-18T18:29:05.578801",
      "start_time": "2017-01-18T18:29:05.573059"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1433,8 +1405,7 @@
      "end_time": "2017-01-18T22:56:09.314439",
      "start_time": "2017-01-18T22:55:58.224991"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1459,8 +1430,7 @@
      "end_time": "2017-01-18T22:56:09.336577",
      "start_time": "2017-01-18T22:56:09.317562"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1537,9 +1507,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Anzahl der Dateien pro Kamera pro Stunde"
    ]
@@ -1552,8 +1520,7 @@
      "end_time": "2017-01-18T18:30:28.970324",
      "start_time": "2017-01-18T18:30:28.961191"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1568,8 +1535,7 @@
      "end_time": "2017-01-18T18:30:29.402651",
      "start_time": "2017-01-18T18:30:29.396632"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1586,7 +1552,6 @@
      "start_time": "2017-01-18T18:30:29.717675"
     },
     "collapsed": false,
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1607,8 +1572,7 @@
      "end_time": "2017-01-18T18:30:30.690840",
      "start_time": "2017-01-18T18:30:30.684710"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1623,8 +1587,7 @@
      "end_time": "2017-01-18T18:30:30.799631",
      "start_time": "2017-01-18T18:30:30.694092"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1639,8 +1602,7 @@
      "end_time": "2017-01-18T18:30:30.903277",
      "start_time": "2017-01-18T18:30:30.898242"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1655,8 +1617,7 @@
      "end_time": "2017-01-18T18:30:31.417919",
      "start_time": "2017-01-18T18:30:31.411024"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1671,8 +1632,7 @@
      "end_time": "2017-01-18T18:30:32.427653",
      "start_time": "2017-01-18T18:30:32.404178"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1773,8 +1733,7 @@
      "end_time": "2017-01-18T18:30:48.537734",
      "start_time": "2017-01-18T18:30:48.528346"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1789,8 +1748,7 @@
      "end_time": "2017-01-18T18:30:59.908816",
      "start_time": "2017-01-18T18:30:59.880715"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1897,8 +1855,7 @@
      "end_time": "2017-01-18T20:07:10.801147",
      "start_time": "2017-01-18T20:07:10.768453"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2005,8 +1962,7 @@
      "end_time": "2017-01-18T18:31:05.133715",
      "start_time": "2017-01-18T18:31:04.826702"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2042,8 +1998,7 @@
      "end_time": "2017-01-18T18:31:09.122626",
      "start_time": "2017-01-18T18:31:09.109748"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2071,9 +2026,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Verlauf über die Zeit"
    ]
@@ -2086,8 +2039,7 @@
      "end_time": "2017-01-18T18:31:51.843530",
      "start_time": "2017-01-18T18:31:50.549164"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2128,8 +2080,7 @@
      "end_time": "2017-01-18T18:32:56.434785",
      "start_time": "2017-01-18T18:32:56.034111"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2161,9 +2112,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Schlechte Tage"
    ]
@@ -2176,8 +2125,7 @@
      "end_time": "2017-01-18T20:48:37.219137",
      "start_time": "2017-01-18T20:48:37.176947"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2214,8 +2162,7 @@
      "end_time": "2017-01-18T18:32:08.087669",
      "start_time": "2017-01-18T18:32:08.055532"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2310,8 +2257,7 @@
      "end_time": "2017-01-18T18:32:08.572643",
      "start_time": "2017-01-18T18:32:08.528308"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2832,9 +2778,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Teilbarkeit durch 4 :D"
    ]
@@ -2847,8 +2791,7 @@
      "end_time": "2017-01-18T18:03:34.880548",
      "start_time": "2017-01-18T18:03:34.862575"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -2978,9 +2921,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Anzahl an Kamera Dateien"
    ]
@@ -2993,8 +2934,7 @@
      "end_time": "2017-01-18T18:34:07.529314",
      "start_time": "2017-01-18T18:34:07.524021"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -3009,8 +2949,7 @@
      "end_time": "2017-01-18T18:34:22.320179",
      "start_time": "2017-01-18T18:34:11.601142"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -3025,8 +2964,7 @@
      "end_time": "2017-01-18T18:34:26.962166",
      "start_time": "2017-01-18T18:34:26.953495"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -3052,8 +2990,7 @@
      "end_time": "2017-01-18T18:35:15.282926",
      "start_time": "2017-01-18T18:35:15.270622"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -3098,8 +3035,7 @@
      "end_time": "2017-01-18T18:35:20.461720",
      "start_time": "2017-01-18T18:35:20.451863"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -3114,8 +3050,7 @@
      "end_time": "2017-01-18T18:35:22.594201",
      "start_time": "2017-01-18T18:35:22.585159"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -3135,18 +3070,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Am letzten Tag ist irgendwas mit der Camera 3 komisch."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Wie oft gibt es welche Dateien (kameras)"
    ]
@@ -3159,8 +3090,7 @@
      "end_time": "2017-01-18T18:35:35.400264",
      "start_time": "2017-01-18T18:35:35.265591"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -3175,8 +3105,7 @@
      "end_time": "2017-01-18T18:35:36.244705",
      "start_time": "2017-01-18T18:35:36.214708"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -3191,8 +3120,7 @@
      "end_time": "2017-01-18T18:35:37.042263",
      "start_time": "2017-01-18T18:35:37.011629"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
