Testing confidence and nodes in networks 0.95 is toooo much error

--- a/bib/TestNewPipeline_Gap.ipynb
+++ b/bib/TestNewPipeline_Gap.ipynb
@@ -458,6 +458,114 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-22T17:13:25.265387",
+     "start_time": "2017-02-22T17:13:25.248687"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1440"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "60*24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-22T21:05:17.836259",
+     "start_time": "2017-02-22T21:05:17.688992"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from scipy import ndimage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-22T21:35:32.104392",
+     "start_time": "2017-02-22T21:35:32.099316"
+    },
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = [1,1,0,0,1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-22T21:35:32.770318",
+     "start_time": "2017-02-22T21:35:32.760744"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 0, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndimage.morphology.binary_dilation(a, [1,1]).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-22T21:28:19.450808",
+     "start_time": "2017-02-22T21:28:19.441277"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ndimage.binary_fill_holes(a).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
