--- a/bib/Tagging.ipynb
+++ b/bib/Tagging.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T17:58:42.441380",
-     "start_time": "2017-02-16T17:58:42.423557"
+     "end_time": "2017-02-24T17:47:51.730299",
+     "start_time": "2017-02-24T17:47:49.147511"
     },
     "collapsed": true
    },
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T17:09:01.189976",
-     "start_time": "2017-02-16T17:09:01.153196"
+     "end_time": "2017-02-24T17:47:54.288927",
+     "start_time": "2017-02-24T17:47:54.273833"
     },
     "collapsed": true
    },
@@ -103,7 +103,8 @@
     "ExecuteTime": {
      "end_time": "2017-02-17T10:07:27.027471",
      "start_time": "2017-02-17T10:07:27.015051"
-    }
+    },
+    "heading_collapsed": true
    },
    "source": [
     "# Dateset: 2016 21.07. 15:00 Uhr (5 Minutes)"
@@ -117,7 +118,8 @@
      "end_time": "2017-02-17T14:39:58.079053",
      "start_time": "2017-02-17T14:39:58.060603"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -136,7 +138,8 @@
      "end_time": "2017-02-17T14:40:03.910573",
      "start_time": "2017-02-17T14:40:00.893069"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -151,7 +154,8 @@
      "end_time": "2017-02-17T14:40:06.539677",
      "start_time": "2017-02-17T14:40:06.525461"
     },
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [
     {
@@ -177,7 +181,8 @@
      "end_time": "2017-02-17T14:40:08.584502",
      "start_time": "2017-02-17T14:40:08.573973"
     },
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [
     {
@@ -203,7 +208,8 @@
      "end_time": "2017-02-17T14:40:16.091714",
      "start_time": "2017-02-17T14:40:13.753124"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -218,7 +224,8 @@
      "end_time": "2017-02-17T14:40:16.851782",
      "start_time": "2017-02-17T14:40:16.839120"
     },
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [
     {
@@ -244,7 +251,8 @@
      "end_time": "2017-02-17T14:40:19.175790",
      "start_time": "2017-02-17T14:40:19.167027"
     },
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [
     {
@@ -270,7 +278,8 @@
      "end_time": "2017-02-17T14:40:25.481354",
      "start_time": "2017-02-17T14:40:21.386595"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -285,7 +294,8 @@
      "end_time": "2017-02-17T14:40:26.370806",
      "start_time": "2017-02-17T14:40:26.358376"
     },
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [
     {
@@ -311,7 +321,8 @@
      "end_time": "2017-02-17T14:40:30.819164",
      "start_time": "2017-02-17T14:40:28.348687"
     },
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -326,7 +337,8 @@
      "end_time": "2017-02-17T14:40:33.202207",
      "start_time": "2017-02-17T14:40:33.190519"
     },
-    "collapsed": false
+    "collapsed": false,
+    "hidden": true
    },
    "outputs": [
     {
@@ -353,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:34.113998",
-     "start_time": "2017-02-16T18:42:34.098379"
+     "end_time": "2017-02-24T17:48:05.119929",
+     "start_time": "2017-02-24T17:48:05.100097"
     },
     "collapsed": true
    },
@@ -368,11 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:34.477004",
-     "start_time": "2017-02-16T18:42:34.452817"
+     "end_time": "2017-02-24T17:48:05.729235",
+     "start_time": "2017-02-24T17:48:05.652115"
     },
     "collapsed": false
    },
@@ -416,7 +428,7 @@
        "1      1   256  28.07.2016          NaN"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,23 +439,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Number of tagged bees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:34.743703",
-     "start_time": "2017-02-16T18:42:34.731544"
+     "end_time": "2017-02-24T17:48:10.347736",
+     "start_time": "2017-02-24T17:48:10.335160"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -452,7 +461,7 @@
        "3181"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,14 +472,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:35.018044",
-     "start_time": "2017-02-16T18:42:35.008050"
+     "end_time": "2017-02-24T17:48:11.558878",
+     "start_time": "2017-02-24T17:48:11.546435"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -479,7 +487,7 @@
        "10"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,14 +498,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:35.390669",
-     "start_time": "2017-02-16T18:42:35.381660"
+     "end_time": "2017-02-24T17:48:14.053973",
+     "start_time": "2017-02-24T17:48:14.045904"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -506,14 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:35.773346",
-     "start_time": "2017-02-16T18:42:35.761188"
+     "end_time": "2017-02-24T17:48:14.504024",
+     "start_time": "2017-02-24T17:48:14.492532"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -522,14 +528,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:36.404261",
-     "start_time": "2017-02-16T18:42:36.396589"
+     "end_time": "2017-02-24T17:48:14.906395",
+     "start_time": "2017-02-24T17:48:14.900929"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -538,14 +543,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:36.855593",
-     "start_time": "2017-02-16T18:42:36.850162"
+     "end_time": "2017-02-24T17:48:15.635298",
+     "start_time": "2017-02-24T17:48:15.630749"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -554,14 +558,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:37.319187",
-     "start_time": "2017-02-16T18:42:37.309600"
+     "end_time": "2017-02-24T17:48:17.930872",
+     "start_time": "2017-02-24T17:48:17.921936"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -570,14 +573,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:38.432028",
-     "start_time": "2017-02-16T18:42:38.285748"
+     "end_time": "2017-02-24T17:48:18.492444",
+     "start_time": "2017-02-24T17:48:18.347844"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -587,14 +589,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:39.606787",
-     "start_time": "2017-02-16T18:42:39.594576"
+     "end_time": "2017-02-24T17:48:19.185494",
+     "start_time": "2017-02-24T17:48:19.169019"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -608,7 +609,7 @@
        "Name: birthdate, dtype: object"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,23 +683,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Tagging Frequency (PLOT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:43.982474",
-     "start_time": "2017-02-16T18:42:43.972834"
+     "end_time": "2017-02-24T17:48:25.281336",
+     "start_time": "2017-02-24T17:48:25.271636"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -707,14 +705,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:45.477158",
-     "start_time": "2017-02-16T18:42:45.462979"
+     "end_time": "2017-02-24T17:48:26.275084",
+     "start_time": "2017-02-24T17:48:26.262773"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -762,7 +759,7 @@
        "2016-07-20        132"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,14 +770,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:50.145442",
-     "start_time": "2017-02-16T18:42:50.135390"
+     "end_time": "2017-02-24T17:49:05.947350",
+     "start_time": "2017-02-24T17:49:05.932493"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -790,14 +786,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:50.540370",
-     "start_time": "2017-02-16T18:42:50.534232"
+     "end_time": "2017-02-24T17:49:06.758496",
+     "start_time": "2017-02-24T17:49:06.753172"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -806,14 +801,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:53.659560",
-     "start_time": "2017-02-16T18:42:53.648378"
+     "end_time": "2017-02-24T17:49:07.611297",
+     "start_time": "2017-02-24T17:49:07.599240"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -852,7 +846,7 @@
        "Index: [2016-06-28, 2016-06-29, 2016-06-30, 2016-07-01, 2016-07-02]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,14 +857,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:54.441311",
-     "start_time": "2017-02-16T18:42:54.433299"
+     "end_time": "2017-02-24T17:49:11.033041",
+     "start_time": "2017-02-24T17:49:11.023126"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -879,14 +872,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:55.729391",
-     "start_time": "2017-02-16T18:42:55.723386"
+     "end_time": "2017-02-24T17:49:12.076678",
+     "start_time": "2017-02-24T17:49:12.071716"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -895,14 +887,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:42:56.589093",
-     "start_time": "2017-02-16T18:42:56.563513"
+     "end_time": "2017-02-24T17:49:13.243896",
+     "start_time": "2017-02-24T17:49:13.219148"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -965,7 +956,7 @@
        "max    155.000000"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,14 +967,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T19:05:43.235131",
-     "start_time": "2017-02-16T19:05:43.226944"
+     "end_time": "2017-02-24T17:49:14.828253",
+     "start_time": "2017-02-24T17:49:14.821779"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -996,14 +986,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T19:05:43.825258",
-     "start_time": "2017-02-16T19:05:43.815180"
+     "end_time": "2017-02-24T17:49:21.998679",
+     "start_time": "2017-02-24T17:49:21.993837"
     },
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1012,14 +1001,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T18:45:23.278091",
-     "start_time": "2017-02-16T18:45:23.261101"
+     "end_time": "2017-02-24T17:49:22.704519",
+     "start_time": "2017-02-24T17:49:22.692695"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1067,7 +1055,7 @@
        "2016-07-02        0.0"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,8 +1072,7 @@
      "end_time": "2017-02-17T15:45:15.340394",
      "start_time": "2017-02-17T15:45:14.847447"
     },
-    "collapsed": false,
-    "hidden": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1131,11 +1118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T23:22:25.260690",
-     "start_time": "2017-02-16T23:22:25.239141"
+     "end_time": "2017-02-24T17:49:29.794113",
+     "start_time": "2017-02-24T17:49:29.783088"
     },
     "collapsed": false
    },
@@ -1185,7 +1172,7 @@
        "2016-07-02        0.0"
       ]
      },
-     "execution_count": 492,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,11 +1183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T23:28:07.176210",
-     "start_time": "2017-02-16T23:28:07.155181"
+     "end_time": "2017-02-24T17:49:30.892759",
+     "start_time": "2017-02-24T17:49:30.875280"
     },
     "collapsed": false
    },
@@ -1219,7 +1206,7 @@
        "Name: birthdate, dtype: float64"
       ]
      },
-     "execution_count": 511,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,26 +1217,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T23:07:20.686233",
-     "start_time": "2017-02-16T23:07:20.679705"
+     "end_time": "2017-02-24T17:49:51.876914",
+     "start_time": "2017-02-24T17:49:51.862673"
     },
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "total = res.birthdate.sum()/2"
+    "total = 2**11"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T23:07:21.335550",
-     "start_time": "2017-02-16T23:07:21.322825"
+     "end_time": "2017-02-24T17:49:52.944284",
+     "start_time": "2017-02-24T17:49:52.936696"
     },
     "collapsed": false
    },
@@ -1257,10 +1244,10 @@
     {
      "data": {
       "text/plain": [
-       "1595.5"
+       "2048"
       ]
      },
-     "execution_count": 481,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,11 +1258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-16T23:08:57.643793",
-     "start_time": "2017-02-16T23:08:57.629573"
+     "end_time": "2017-02-24T17:49:54.776698",
+     "start_time": "2017-02-24T17:49:54.761542"
     },
     "collapsed": false
    },
@@ -1284,7 +1271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2016-07-21\n"
+      "2016-07-27\n"
      ]
     }
    ],
@@ -1292,7 +1279,7 @@
     "cumm = 0\n",
     "for d,bday in res.iterrows():\n",
     "    cumm += bday[0]\n",
-    "    if cumm >= total:\n",
+    "    if cumm >= 2048:\n",
     "        print(d)\n",
     "        break"
    ]
