--- a/bib/Tagging.ipynb
+++ b/bib/Tagging.ipynb
@@ -1258,11 +1258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2017-02-24T17:49:54.776698",
-     "start_time": "2017-02-24T17:49:54.761542"
+     "end_time": "2017-02-27T09:52:05.326779",
+     "start_time": "2017-02-27T09:52:05.293250"
     },
     "collapsed": false
    },
@@ -1271,6 +1271,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "118.0\n",
+      "2016-06-28\n",
+      "214.0\n",
+      "2016-06-29\n",
+      "279.0\n",
+      "2016-06-30\n",
+      "434.0\n",
+      "2016-07-01\n",
+      "434.0\n",
+      "2016-07-02\n",
+      "434.0\n",
+      "2016-07-03\n",
+      "562.0\n",
+      "2016-07-04\n",
+      "690.0\n",
+      "2016-07-05\n",
+      "818.0\n",
+      "2016-07-06\n",
+      "946.0\n",
+      "2016-07-07\n",
+      "946.0\n",
+      "2016-07-08\n",
+      "946.0\n",
+      "2016-07-09\n",
+      "946.0\n",
+      "2016-07-10\n",
+      "1011.0\n",
+      "2016-07-11\n",
+      "1050.0\n",
+      "2016-07-12\n",
+      "1176.0\n",
+      "2016-07-13\n",
+      "1299.0\n",
+      "2016-07-14\n",
+      "1406.0\n",
+      "2016-07-15\n",
+      "1406.0\n",
+      "2016-07-16\n",
+      "1406.0\n",
+      "2016-07-17\n",
+      "1406.0\n",
+      "2016-07-18\n",
+      "1449.0\n",
+      "2016-07-19\n",
+      "1581.0\n",
+      "2016-07-20\n",
+      "1730.0\n",
+      "2016-07-21\n",
+      "1861.0\n",
+      "2016-07-22\n",
+      "1861.0\n",
+      "2016-07-23\n",
+      "1861.0\n",
+      "2016-07-24\n",
+      "1893.0\n",
+      "2016-07-25\n",
+      "2014.0\n",
+      "2016-07-26\n",
+      "2142.0\n",
+      "2016-07-27\n",
       "2016-07-27\n"
      ]
     }
@@ -1279,9 +1339,37 @@
     "cumm = 0\n",
     "for d,bday in res.iterrows():\n",
     "    cumm += bday[0]\n",
+    "    print(cumm)\n",
+    "    print(d)\n",
     "    if cumm >= 2048:\n",
     "        print(d)\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2017-02-27T09:51:09.734892",
+     "start_time": "2017-02-27T09:51:09.727063"
+    },
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2142-2048"
    ]
   },
   {
@@ -1868,6 +1956,15 @@
    "source": [
     "plotConfidenc(q, 'all cameras')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
