--- a/bib/TestConfDayNetwork.ipynb
+++ b/bib/TestConfDayNetwork.ipynb
@@ -5480,7 +5480,7 @@
     "width": "175px"
    },
    "toc_section_display": "none",
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
